# traine_task

./: .env_example  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json
auth/: Dockerfile  main.py  pyproject.toml  shell.py
auth/app/: db.py  factory.py
auth/app/api/: __init__.py
auth/app/api/v1/: auth.py
auth/app/core/: config.py
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/versions/: 49e7823e128c_init.py  85411579ff48_ini.py
backend/app/: db.py  factory.py
backend/app/api/: __init__.py
backend/app/api/v1/: user.py
backend/app/core/: config.py
backend/app/models/: client.py  user.py
backend/app/repo/: user_repo.py
backend/app/schemas/: client.py  user.py
backend/static/: index.html
backend/static/assets/: index-B8iZLBFa.js  index-xibpKHoP.css
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/assets/api/: UserService.js
frontend/src/assets/components/: CreateClient.jsx
frontend/src/assets/pages/: Clients.jsx  Login.jsx
